--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@
     margin: 0px;
 }
 .header-nav{
-  border: 1px solid black;
+   
+   box-shadow: 0 10px #eeecf9;
 }
 .nav{
     display: flex;
-   padding: 10px 5px 10px 5px  ;
+   padding:10px 5px 10px 5px  ; 
+   margin: 10px 5px 10px 5px;
    justify-content: space-between;
+    
 }
 
 #nav-right{
