--- a/style.css
+++ b/style.css
@@ -1,19 +1,96 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400&family=Quicksand:wght@300;400;500;600;700&family=Raleway:ital,wght@0,200;1,200;1,400;1,500;1,600;1,700;1,900&display=swap');
 *{
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
 }
 
-.header{
+
+
+.top-header{
+position: fixed;
+    height: 3.8rem;
+    width: 100%;
+    background-color: white;
+    display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 8px 2rem 8px 2rem;
+box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+ 
+}
+
+
+.right {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 2.5rem;
+    width: 5rem;
+    padding: 0px 8px;
+ 
+        border: 1px solid #2B7BFF;
+        border-radius: 4px;
+        font-family: 'poppins';
+        color: #2B7BFF;
+}
+
+.right a{
+font-size: 12px;
+font-weight: 700;
+letter-spacing: 1px;
+padding: unset;
+
+}
+
+.mid a{
+    font-family: inherit;
+        font-size: 14px;
+        font-weight: bold;
+        color: black;
+}
+
+.fa-chevron-down{
+
+   color: black;
+}
+
+
+#main{
+    background-image: url(/images/bg-home-banner-lg.jpg);
+    height: 100vh;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .header{
     height: 90px;
    
 
-}
-.nav{
+} */
+/* .nav{
     position: fixed;
     top: 0px;
     background-color: #fbfbfd;
-    /* padding: 10px 0px; */
+  
     border-bottom: 1px solid #eeecf9;
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
@@ -24,10 +101,10 @@
     justify-content: space-between;
     height: 90px;
     width: 100%;
-    /* font-family: sans-serif; */
-}
+  
+} */
 
-#nav-right{
+/* #nav-right{
    
     display: flex !important;
    flex: 0.470;
@@ -37,8 +114,8 @@ align-items: center;
    right: 90px;
 
 
-}
-
+} */
+/* 
 #nav-item-login .nav-link{
     color: #fff !important;
     background-color:#00afcb;
@@ -61,10 +138,6 @@ align-items: center;
 }
 #nav-right .nav-link:hover{
     color: #007bff;
-}
+} */
 
-#main{
-    
-    background-color: black;
-    height: 620px;
-}
+
